added styling, form not working

--- a/style.css
+++ b/style.css
@@ -2,25 +2,109 @@
     font-family: 'Muli', serif;
 }
 
-h1 {
-    color: #009900;
-    max-width: 400px;
-    font-size: 22px;
-    font-weight: bold;
-
-}
-
-body{
+.width {
     max-width: 1080px;
     margin: auto;
-    background-color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+main {
+    padding: 0;
+    margin: 0;
+}
+
+.logo-header {
+    margin: 10px;
+    color: black; 
+    max-width: 160px; 
+    text-align: center;  
+}
+
+p{
+    margin: auto;
+    max-width: 600px;
+    font-size: 20px;
+}
+
+.logo {
+    color: #009900;
+    font-size: 42px;
+    font-weight: bold;
+    max-width: 300px;
+    margin: 16px auto;
+    text-align: center;
+}
+
+.hero {
+    width: 100%;
+    height: 600px;
+    position: relative;
+    z-index: 1;
+}
+
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%; 
+    height: 100%;  
+    opacity: .7; 
+    z-index: -1;
+    background: url("./img/wallpaper_hero.jpg");
+    background-size: cover;
+  }
+
+p {
+    color: rgb(25,25,25)
+}
+
+input[type=submit] {
+    padding: 12px;
+    background-color: #009900;
+    text-decoration: none;
+    border: none;
+    color: white;
+    font-weight: bold;
+    border-radius: 8px;
+    font-size: 16px;
+}
+input[type=text] {
+    font-size: 16px;
+}
+
+h1 {
+    max-width: 400px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+h2 {
+    margin-top: 0;;
+}
+
+form {
+    color: rgb(25,25,25);
+    width: 75%;
+    background-color: white;
+    padding: 26px 50px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px;
+    margin: auto;
 }
 
 #app {
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
     flex-wrap: wrap;
+    max-width: 1080px;
+    margin: auto;
+    background-color: white;
+    color: white;
 }
 
 #text {
@@ -28,16 +112,94 @@ body{
 }
 
 .card {
-    padding: 20px;
+    padding: 0px;
     background-color: #0099000e;
-    display: inline-block;
-    margin: 10px;
-    border-radius: 15px;
-    width: 400px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    width: 300px;
+    margin: 16px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px;
+}
+
+.card-title {
+    padding: 10px;
+    color: rgb(25,25,25);
 }
 
 .card-image {
-    width: 250px;
+    width: 100%;
     height: 250px;
     margin: auto;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
+
+.card-head {
+    width: 300px;
+    height: 250px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #009900;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #0099AA;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
