pre-loader added

--- a/style.css
+++ b/style.css
@@ -127,6 +127,19 @@ form {
     -webkit-box-sizing: border-box;
 }
 
+.card-loading {
+  width: 300px;
+  height: 400px;
+  border: 2px solid rgba(128, 128, 128, 0.3);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border-radius: 5px;
+  margin: 16px;
+  z-index: 1;
+}
+
 .card-title {
     padding: 10px;
     color: rgb(25,25,25);
@@ -244,4 +257,22 @@ form {
   .icon-text {
       font-size: 16px;
       margin: 0 16px 0 0 ;
+  }
+
+  .full-width {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    /* margin-bottom: -200px; */
+    z-index: 2;
+    height: 425px;
+    background-color: rgba(255,255,255, .3);
+  }
+
+  .full-width > h1 {
+    color: #009900;
+    text-align: center;
+    font-size: 32px;
+    margin: auto
   }
