--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p{
 
 .hero {
     width: 100%;
-    height: 600px;
+    height: 800px;
     position: relative;
     z-index: 1;
 }
@@ -95,7 +95,7 @@ form {
     padding: 26px 50px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px;
-    margin: auto;
+    margin: auto auto auto auto;
 }
 
 #app {
@@ -106,7 +106,7 @@ form {
     max-width: 1080px;
     background-color: white;
     color: white;
-    margin: 50px auto;
+    margin: 100px auto;
 }
 
 #text {
@@ -268,6 +268,7 @@ form {
     z-index: 2;
     height: 425px;
     background-color: rgba(255,255,255, .3);
+
   }
 
   .full-width > h1 {
