--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
     font-family: 'Muli', serif;
 }
 
+body{
+  margin: 0px;
+  padding: 0px;
+}
+
+
 .width {
     max-width: 1080px;
     margin: auto;
