filters working, no health yet, styling not finished

--- a/style.css
+++ b/style.css
@@ -298,6 +298,7 @@ form {
   .form-flex {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
   }
 
   input[type=submit] {
